--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <h1> Banana Foster Belgian Waffles  </h1>   
 <ul>
  <p> <li> <a href= "./Recipes/drinks.html"> Drinks Recipe </a>  </li></p>
-  <p>  <li><a href="/Recipes/kamikaze.html"> Kamikaze Drink</a> </li></p>
+  <p>  <li><a href="./Recipes/kamikaze.html"> Kamikaze Drink</a> </li></p>
   </ul>
  <br>
 
